--- a/Demo/index.html
+++ b/Demo/index.html
@@ -70,7 +70,7 @@
                         if (num <= cat * 1) {
                             alert("4999元");
                         } else if (num <= cat * 2) {
-                            alert("条50元");
+                            alert("50元");
                         } else if (num <= cat * 3) {
                             alert("10元");
                         } else if (num <= cat * 4) {
